spec/e2e/operator/negate_nonnum.lit
-"s"; # error: [line 1] Operand must be a number.
